[package]
name = "rustato-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Core functionality for the Rustato library"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
once_cell = "1.7"
lazy_static = "1.4"
parking_lot = "0.12.1"