[package]
name = "rustato-macros"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "Macros for the Rustato library"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustato-core = { path = "../rustato-core", version = "0.1.0" }