[package]
name = "rustato-proc-macros"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "Procedural macros for the Rustato state management library"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
rustato-core = { path = "../rustato-core", version = "0.1.0" }