[package]
name = "rustato"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "A global state management library for Rust applications"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustato-core = { path = "../rustato-core" }
rustato-macros = { path = "../rustato-macros" }
rustato-proc-macros = { path = "../rustato-proc-macros" }
once_cell = "1.7"