[package]
name = "rustato"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
description = "A global state management library for Rust applications"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustato-core = { path = "../rustato-core", version = "0.1.0" }
rustato-macros = { path = "../rustato-macros", version = "0.1.1" }
rustato-proc-macros = { path = "../rustato-proc-macros", version = "0.1.1" }
once_cell = "1.7"
paste = "1.0"
ctor = "0.2.8"